feat: rate limiting, SSE events, 429 catcher — deploy-ready
- IP-based rate limiting on workspace creation (10/hr default, WORKSPACE_RATE_LIMIT env)
- SSE event stream per workspace (document.created/updated/deleted, comment.created, lock.acquired/released)
- EventBus with broadcast channel, 15s heartbeat, lagged-client handling
- 429 JSON error catcher
- ClientIp guard (XFF/X-Real-Ip/socket)
- 3 new integration tests (rate limiting, SSE endpoint, 429 catcher)
- 20 tests passing, zero clippy warnings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ dotenvy = "0.15"
 pulldown-cmark = "0.10"
 chrono = { version = "0.4", features = ["serde"] }
 similar = "2.4"  # for text diffing
+tokio = { version = "1", features = ["sync", "time"] }
 
 [dev-dependencies]
 rocket = { version = "0.5", features = ["json"] }
